--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -36,6 +36,8 @@
 	<string>需要访问相册以保存图片</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>需要访问相册以保存图片</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>需要访问您的位置以计算与门店的距离。</string>
 
 	<!-- 允许访问 http://192.168.x.x:8000 这类非 https 的本地服务 -->
 	<key>NSAppTransportSecurity</key>
