--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   video_player: ^2.9.2
   image_gallery_saver: ^2.0.3
   path_provider: ^2.1.4
+  geolocator: ^12.0.0
+  maps_launcher: ^2.2.1
 
 dev_dependencies:
   flutter_test:
