--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,11 +42,12 @@ dependencies:
   path_provider: ^2.1.4
   geolocator: ^12.0.0
   maps_launcher: ^2.2.1
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  mocktail: ^1.0.3
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
