--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,11 @@ dependencies:
   url_launcher: ^6.3.0
   shared_preferences: ^2.3.2
   video_player: ^2.9.2
+  video_thumbnail: ^0.5.6
   image_gallery_saver: ^2.0.3
   path_provider: ^2.1.4
-  geolocator: ^12.0.0
-  maps_launcher: ^2.2.1
+  geolocator: ^14.0.2
+  maps_launcher: ^3.0.0+1
   provider: ^6.1.2
 
 dev_dependencies:
