--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   geolocator: ^14.0.2
   maps_launcher: ^3.0.0+1
   provider: ^6.1.2
+  dio: ^5.4.0
 
 dev_dependencies:
   flutter_test:
