--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -29,15 +29,13 @@
 	<key>NSCameraUsageDescription</key>
 	<string>需要使用相机拍摄照片和视频</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>需要使用麦克风录制视频</string>
+	<string>需要使用麦克风录制视频声音</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>需要访问相册以上传照片和视频</string>
+	<string>需要访问相册以选择图片和视频</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>需要访问相册以保存图片</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>需要访问相册以保存图片</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>需要访问您的位置以计算与门店的距离。</string>
+	<string>需要访问您的位置以计算与门店的距离</string>
 
 	<!-- 允许访问 http://192.168.x.x:8000 这类非 https 的本地服务 -->
 	<key>NSAppTransportSecurity</key>
@@ -45,6 +43,9 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>此应用需要访问局域网服务器以进行登录和任务同步。</string>
 	
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
