--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   maps_launcher: ^3.0.0+1
   provider: ^6.1.2
   dio: ^5.4.0
+  wechat_assets_picker: ^10.0.0
 
 dev_dependencies:
   flutter_test:
