--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CADisableMinimumFrameDurationOnPhone</key>
-	<true/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
@@ -26,31 +24,31 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>NSCameraUsageDescription</key>
-	<string>需要使用相机拍摄照片和视频</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>需要使用麦克风录制视频声音</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>需要访问相册以选择图片和视频</string>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>需要访问相册以保存图片</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>需要访问您的位置以计算与门店的距离</string>
-	<key>NSFaceIDUsageDescription</key>
-	<string>用于快速登录您的账号</string>
-
-	<!-- 允许访问 http://192.168.x.x:8000 这类非 https 的本地服务 -->
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
-
+	<key>NSCameraUsageDescription</key>
+	<string>需要使用相机拍摄照片和视频</string>
+	<key>NSFaceIDUsageDescription</key>
+	<string>用于快速登录您的账号</string>
 	<key>NSLocalNetworkUsageDescription</key>
 	<string>此应用需要访问局域网服务器以进行登录和任务同步。</string>
-	
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>需要访问您的位置以计算与门店的距离</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>需要使用麦克风录制视频声音</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>需要访问相册以保存图片</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>需要访问相册以选择图片和视频</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -68,5 +66,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>CADisableMinimumFrameDurationOnPhone</key>
+	<true/>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
 </dict>
 </plist>
