--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,3 +1,5 @@
+# pubspec.yaml
+
 name: survey_app
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
@@ -49,6 +51,11 @@ dependencies:
   wechat_camera_picker: ^4.0.0
   local_auth: ^2.3.0 # 面容ID / 指纹 / 生物识别
   flutter_secure_storage: ^9.0.0 # 安全保存账号密码
+
+  tpns_flutter_plugin:
+    git:
+      url: https://github.com/TencentCloud/TPNS-Flutter-Plugin
+      ref: V1.3.6
 
 dev_dependencies:
   flutter_test:
