--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   cupertino_icons: ^1.0.8
 
@@ -51,6 +53,7 @@ dependencies:
   wechat_camera_picker: ^4.0.0
   local_auth: ^2.3.0 # 面容ID / 指纹 / 生物识别
   flutter_secure_storage: ^9.0.0 # 安全保存账号密码
+  intl: ^0.20.2
 
   tpns_flutter_plugin:
     git:
