--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_markdown: ^0.7.2
   flutter_localizations:
     sdk: flutter
 
